deploy/jdp-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jdp-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jdp-web
  template:
    metadata:
      labels:
        app: jdp-web
    spec:
      containers:
      - name: jdp-web
        image: jdptest.azurecr.io/jdp-web-img:v2
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: jdp-app-secret
