deploy/jdp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdp-web-svc
  namespace: jdp
spec:
  type: ClusterIP
  selector:
    app: jdp-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
