deploy/jdp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jdp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - web.jdpbgmi.store
    secretName: jdp-tls
  rules:
  - host: web.jdpbgmi.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jdp-web-svc
            port:
              number: 80
